# QT_Chat

./: README.md
QT_Chat_Server/: CMakeLists.txt  main.cpp  main.qml  tcpserver.cpp  tcpserver.hpp
